Implement Equipments API
